# trip-planner

./: .env.example  .gitignore  .mcp.json  .prettierignore  02_honeymoon_plan.md  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  _config.yml  claude_desktop_config.example.json  eslint.config.mjs  index.md  manifest.json  next.config.ts  package-lock.json  package.json  prisma.config.ts  pyproject.toml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: ux-reviewer.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: design-handoff.yml
.github/workflows/: auto-release.yml  auto-tag.yml  ci.yml  deploy-pages.yml  drift-audit.yml  pypi-publish.yml  speckit-gate.yml  sync-main-to-develop.yml  towncrier-fragment-check.yml
.specify/config/: harness.json  tech-terms-blocklist.txt
.specify/memory/: constitution.md
.specify/templates/: implement-template.md  migration-header-guide.md  plan-template.md  quickstart-template.md  spec-template.md  tasks-template.md
changes/: 249.chore.md  250.chore.md  251.chore.md  252.chore.md  269.chore.md  270.chore.md  270.docs.md  270.feat.md  272.chore.md  282.chore.md  285.fix.md  286.chore.md  287.chore.md  294.fix.md  296.feat.md  301.feat.md  304.feat.md  305.feat.md  306.feat.md  307.docs.md  313.feat.md  317.fix.md  318.chore.md  325.fix.md  328.fix.md  330.fix.md  332-oidc.fix.md  332.fix.md  334.fix.md  337.fix.md  339.fix.md  341.fix.md  343.fix.md  355.breaking.md  356.feat.md  357.feat.md  358.feat.md  359.feat.md  360.feat.md  361.chore.md  (+171 more)
coverage/: clover.xml  coverage-final.json  index.html
coverage/components/: ActivityCard.tsx.html  ActivityForm.tsx.html  ActivityList.tsx.html  index.html
design/: README.md  tokens.json
docs/: ARCHITECTURE.md  DEVELOPMENT.md  DOMAIN.md  ENVIRONMENTS.md  ERD.md  README.md  WORKFLOW.md  analytics-setup.md  auth-cli.md  brand-image-prompts.md  design-handoff.md  glossary.md
docs/adr/: 0001-spec-terminology-policy.md  0002-library-first-policy.md  0003-per-trip-shared-calendar.md  0004-gcal-testing-mode-cost.md  0005-expand-and-contract-pattern.md  0006-external-calendar-import-policy.md  0007-calendar-swipe-embla.md  0008-nextjs-fullstack-single-runtime.md  0009-analytics-and-search-exposure.md  0010-test-coverage-threshold.md  README.md
docs/audits/: 2026-04-root-legacy-audit.md  2026-04-v1-spec-snapshot.md  README.md
docs/evidence/: README.md
docs/research/: README.md  apple-caldav-app-password-guide.md  apple-caldav-poc.md  rapidapi-travel-api-comparison.md  v290-gcal-share-poc.md
e2e/: activity-crud.spec.ts
mcp/: README.md
mcp-servers/hotels_mcp_server/: .env.example
mcp/trip_mcp/: __init__.py  planner.py  rapidapi.py  search.py  server.py  web_client.py
prisma/: schema.prisma
public/: CNAME
scripts/: audit-tokens.ts  auth-login.mjs  build-tokens.ts  check-docs-reader-header.sh  check-legacy-utilities.sh  check-readme-schema.sh  generate-pdf.sh  get_attraction_details.py  install.sh  migrate-markdown.ts  parse-daily-to-events.py  search_attraction_locations.py  search_attractions.py  setup.sh  test_mcp_api.py  validate-budget.py  validate-daily.py  verify-trip-period-alignment.ts  verify-trip-period-contract-readiness.ts
scripts/audit/: day-schema.ts
scripts/bootstrap/: install-v3.sh  oauth-listener.mjs
specs/: README.md
specs/001-ax-travel-planning/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-bundle-ical-mcp/: quickstart.md  tasks.md
specs/003-companion-feedback-channel/: quickstart.md  tasks.md
specs/004-fullstack-transition/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/005-ax-api-mcp/: plan.md  research.md  spec.md
specs/006-structured-activity/: data-model.md  quickstart.md  research.md  spec.md
specs/007-oauth-cli-reauth/: data-model.md
specs/009-git-release-strategy/: plan.md
specs/011-project-identity-surface/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-shadcn-design-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-shadcn-phase2/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-landing-docs-refresh/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-day-schema-redesign/: plan.md  quickstart.md  spec.md  tasks.md
specs/016-sortorder-drop/: plan.md  quickstart.md  spec.md  tasks.md
specs/017-neon-db-split/: plan.md  quickstart.md  spec.md  tasks.md
specs/018-gcal-integration/: data-model.md  plan.md  quickstart.md  (+3 more)
src/: auth.config.ts  auth.ts  middleware.ts
templates/: daily-template.md  trip-template.md
tests/: middleware.test.ts  setup.ts
web/: package-lock.json  package.json
(+768 files in other folders)
