# Trip Planner MCP Server
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trip-planner-mcp"
version = "2.2.1"
description = "여행 숙소, 항공편, 관광지 검색 + 구조화 활동 관리 MCP 서버 (20개 도구)"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [{ name = "idean3885" }]
keywords = ["travel", "booking", "mcp", "claude-code", "hotels", "flights", "attractions", "itinerary", "planner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
trip-planner-mcp = "trip_mcp.server:main"

[project.urls]
Homepage = "https://github.com/idean3885/trip-planner"
Repository = "https://github.com/idean3885/trip-planner"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["mcp"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.setuptools.packages.find]
where = ["mcp"]
